fix(ui): fix tabs on mobile not registering the mouse properly

--- a/src/assets/scss/_colors.scss
+++ b/src/assets/scss/_colors.scss
@@ -25,5 +25,7 @@ $color-bg: map.get($colors, eerie-black);
 $color-button-background: map.get($colors, light-brown);
 
 $color-panes-text: map.get($colors, dark-brown);
+$color-panes-text-secondary: map.get($colors, bone-white);
+$color-panes-body: map.get($colors, eerie-black);
 $color-panes-border: map.get($colors, medium-brown);
 $color-panes-shadow: map.get($colors, light-brown);
